--- a/Documentation/1x16.md
+++ b/Documentation/1x16.md
@@ -11,21 +11,26 @@
 
 ## 🎯 Назначение
 
-Подсистема сжатия и декомпрессии отвечает за эффективное хранение in-memory и NVMe-данных с минимальными накладными расходами на чтение/запись. Она реализует несколько алгоритмов сжатия, адаптивно выбираемых на основе статистики данных и типа хранилища (column-store, row-store, JSON). Цель — сократить объём оперативной памяти, ускорить I/O и повысить пропускную способность без потерь точности и совместимости.
+Подсистема сжатия и декомпрессии отвечает за эффективное хранение и обработку данных в оперативной памяти и NVMe-носителях. Она реализует адаптивно выбираемые алгоритмы сжатия, оптимизированные под тип данных (строки, числа, булевы и пр.) и характер нагрузки (OLTP, OLAP, time-series). Основные цели:
+
+* сокращение объёма занимаемой памяти,
+* ускорение чтения и восстановления,
+* снижение I/O-нагрузки и затрат на инфраструктуру,
+* интеграция с WAL и snapshot для компрессии на всех уровнях.
 
 ---
 
 ## ⚙️ Функциональность
 
-| Подсистема                    | Реализация / Особенности                                              |
-| ----------------------------- | --------------------------------------------------------------------- |
-| Словарное сжатие (Dictionary) | Сжатие повторяющихся строк и значений с глобальным/локальным словарём |
-| RLE (Run Length Encoding)     | Применяется к упорядоченным данным и булевым столбцам                 |
-| Delta Encoding                | Эффективно для чисел с малыми приращениями (timestamps, counters)     |
-| Frame-of-Reference            | Базовое значение + смещения, используется для float/int               |
-| Векторизованная декомпрессия  | SIMD-ориентированная обработка с блоками 128/256 значений             |
-| Адаптивный выбор алгоритма    | На основе профайлинга: entropy, cardinality, data type                |
-| Сжатие WAL и snapshot         | Используется delta + dictionary для временных и логов                 |
+| Подсистема                    | Реализация / Особенности                                                              |
+| ----------------------------- | ------------------------------------------------------------------------------------- |
+| Словарное сжатие (Dictionary) | Для строк с низкой кардинальностью; поддержка глобальных и локальных словарей         |
+| RLE (Run Length Encoding)     | Эффективно для булевых значений и повторов в отсортированных колонках                 |
+| Delta Encoding                | Используется для монотонных числовых последовательностей (timestamps, counters и пр.) |
+| Frame-of-Reference            | Хранит базовое значение и смещения; оптимально для float/int                          |
+| Векторизованная декомпрессия  | SIMD (AVX2/AVX512/NEON), обработка блоков по 128/256 элементов                        |
+| Адаптивный выбор алгоритма    | Профайлинг по энтропии, кардинальности, NULL ratio и длине значений                   |
+| Сжатие WAL и snapshot         | Используется delta+dictionary для транзакционных логов и инкрементальных снимков      |
 
 ---
 
@@ -48,6 +53,8 @@ typedef struct compressed_block_t {
 } compressed_block_t;
 ```
 
+Каждый блок содержит метаданные: тип, размеры, контрольную сумму. Используется и в RAM, и в snapshot на NVMe.
+
 ---
 
 ## 🔄 Зависимости и связи
@@ -64,11 +71,13 @@ compression_engine --> buffer_pool
 
 ## 🧠 Особенности реализации
 
-* Язык: **C23**, векторизация через AVX512/NEON (если доступно)
-* Поддержка NUMA-aware аллокации
-* Встроенные профайлеры cardinality/entropy
-* Copy-on-write для изменённых блоков
-* Распараллеливание сжатия по shard/column
+* Язык: **C23**
+* SIMD: AVX2 / AVX512 / NEON, fallback на scalar
+* NUMA-aware аллокация
+* Copy-on-write для сжатых данных
+* Inline-профайлеры (entropy, cardinality)
+* Параллелизм по shard/column
+* Потокобезопасность: lock-free очереди
 
 ---
 
@@ -82,44 +91,46 @@ compression_engine --> buffer_pool
 
 ## 🔧 Основные функции на C
 
-| Функция                 | Прототип                                                              | Описание                                      |
-| ----------------------- | --------------------------------------------------------------------- | --------------------------------------------- |
-| `compress_block`        | `compressed_block_t *compress_block(const void *input, size_t size)`  | Автоматически выбирает и применяет алгоритм   |
-| `decompress_block`      | `void *decompress_block(const compressed_block_t *block)`             | Распаковывает данные в исходное представление |
-| `choose_compression`    | `compression_type_t choose_compression(const void *data, size_t len)` | Профилирует и выбирает стратегию              |
-| `compress_column_batch` | `void compress_column_batch(column_t *col)`                           | Сжатие столбца с возможной векторизацией      |
-| `compression_init`      | `void compression_init(void)`                                         | Инициализация таблиц частот и энтропии        |
+| Имя функции             | Прототип                                                              | Описание                                            |
+| ----------------------- | --------------------------------------------------------------------- | --------------------------------------------------- |
+| `compress_block`        | `compressed_block_t *compress_block(const void *input, size_t size)`  | Автоматический выбор и применение алгоритма         |
+| `decompress_block`      | `void *decompress_block(const compressed_block_t *block)`             | Распаковка блока в исходное представление           |
+| `choose_compression`    | `compression_type_t choose_compression(const void *data, size_t len)` | Профайлинг и выбор подходящего типа                 |
+| `compress_column_batch` | `void compress_column_batch(column_t *col)`                           | Сжатие колонок для column-store                     |
+| `compression_init`      | `void compression_init(void)`                                         | Инициализация частотных таблиц, словарей и эвристик |
 
 ---
 
 ## 🧪 Тестирование
 
-* **Unit**: тесты на каждый алгоритм (valgrind + ASAN)
-* **Fuzz**: сжатие/декомпрессия случайных потоков
-* **Stress**: 100ГБ колонок с переменной энтропией
-* **Coverage**: >95% по src/compression/\*
+* **Unit**: на каждый алгоритм (ASAN + valgrind)
+* **Fuzz**: генерация и проверка случайных потоков
+* **Stress**: ≥100 ГБ сжатия/декомпрессии разных форматов
+* **Soak**: одновременная нагрузка WAL + snapshot
+* **Coverage**: >95% `src/compression/`
 
 ---
 
 ## 📊 Производительность
 
-| Метрика                       | Значение                            |
-| ----------------------------- | ----------------------------------- |
-| Средний коэффициент сжатия    | 2.4x (dictionary), 3.6x (delta+FOR) |
-| Скорость сжатия (in-memory)   | 750 MB/s на ядро (векторизация ON)  |
-| Декомпрессия (в OLAP запросе) | 1.2 GB/s на shard                   |
-| Overhead выбора стратегии     | <100 µs на колонку                  |
+| Метрика                     | Значение                                          |
+| --------------------------- | ------------------------------------------------- |
+| Средний коэффициент сжатия  | 2.4x (dictionary), 3.6x (delta+FOR), 1.6x (mixed) |
+| Скорость сжатия (in-memory) | 750 MB/s на ядро (SIMD)                           |
+| Скорость декомпрессии       | 1.2 GB/s на shard в OLAP                          |
+| Overhead выбора стратегии   | <100 мкс на колонку                               |
+| Память на метаданные        | <0.5% от общего объема данных                     |
 
 ---
 
 ## ✅ Соответствие SAP HANA+
 
-| Критерий                  | Оценка | Комментарий                                               |
-| ------------------------- | ------ | --------------------------------------------------------- |
-| Множественные алгоритмы   | 100    | Поддержка всех SAP HANA-совместимых подходов              |
-| Адаптивность              | 100    | Автоматический выбор стратегии                            |
-| Производительность        | 100    | SIMD-векторизация и многопоточность                       |
-| Интеграция с WAL/Snapshot | 100    | Прямая поддержка delta compression для журналов и бэкапов |
+| Критерий                  | Оценка | Комментарий                                                  |
+| ------------------------- | ------ | ------------------------------------------------------------ |
+| Поддержка всех алгоритмов | 100    | Dict, RLE, delta, FOR, векторизация                          |
+| Runtime-декомпрессия      | 100    | SIMD + streaming OLAP совместимы с HANA                      |
+| Интеграция с WAL/Snapshot | 100    | Используется гибридное сжатие                                |
+| Адаптивность              | 100    | Алгоритм выбирается динамически при изменении профиля данных |
 
 ---
 
@@ -132,35 +143,34 @@ compress_column_batch(col);
 
 ---
 
-## 🧩 Будущие доработки
-
-* Поддержка ZSTD и LZ4HC как fallback для NVMe
-* ML-предсказание оптимального алгоритма
-* Инкрементальное сжатие delta+dictionary
-
----
-
 ## 🔐 Безопасность данных
 
-* Проверка контрольных сумм сжатых блоков
-* Защита от переполнения буфера при декомпрессии
-* Memory fencing при работе с NUMA-страницами
+* Контрольные суммы (CRC32/XXH64)
+* Проверка границ буферов при декомпрессии
+* Memory fencing для NUMA
+* Read-only snapshot mode
 
 ---
 
 ## 🛰️ Связь с бизнес-функциями
 
-* Эффективное хранение аналитических колонок
-* Ускорение snapshot recovery и резервного копирования
-* Снижение стоимости инфраструктуры (RAM footprint)
+* Увеличение плотности хранения аналитических колонок
+* Ускорение восстановления после сбоев
+* Снижение нагрузки на RAM/SSD
+* Масштабирование без роста затрат
 
 ---
 
 ## 🗂️ Версионирование и история изменений
 
-* Версия: `v1.0`
-* Обновлено: `26.07.2025`
-* Ответственный: `storage_team@domain`
+* **Версия:** `v1.0.2`
+* **Обновлено:** `26.07.2025`
+* **Ответственный:** `storage_team@domain`
+* **История:**
+
+  * `v1.0` — начальная реализация
+  * `v1.0.1` — NUMA и SIMD fallback
+  * `v1.0.2` — расширенные тесты и snapshot-интеграция
 
 ---
 
