--- a/Documentation/0x01.md
+++ b/Documentation/0x01.md
@@ -1,195 +1,199 @@
-# 🧱 Блок 1.16 — Сжатие и декомпрессия (Compression Engine)
+# 🧱 Блок 0.1 — Точка входа (main)
 
 ---
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1 — Архитектура и Хранилище
-* **Блок:** 1.16 — Сжатие и декомпрессия
+* **Пакет:** 0 — Инициализация и системный старт
+* **Блок:** 0.1 — Точка входа (main)
 
 ---
 
 ## 🎯 Назначение
 
-Подсистема сжатия и декомпрессии обеспечивает эффективное хранение и обработку данных в оперативной памяти и на NVMe-носителях. Она реализует множество алгоритмов сжатия, адаптированных под различные типы данных (числовые, строковые, булевы и т.д.) и профили использования (OLTP, OLAP, time-series). Главная цель — существенно снизить объём используемой памяти, повысить пропускную способность системы и уменьшить задержки доступа к данным. Это позволяет масштабировать систему без линейного роста затрат на оборудование и инфраструктуру.
+Блок `0.1 main()` является **точкой инициализации и завершения** работы всей In-Memory РСУБД. Он координирует запуск всех подсистем: конфигурации, логирования, хранилища, репликации, планировщика, API-интерфейсов и контрольных потоков. Это критически важный блок, обеспечивающий корректное состояние всей системы.
 
 ---
 
 ## ⚙️ Функциональность
 
-| Подсистема                    | Реализация / Особенности                                                                                |
-| ----------------------------- | ------------------------------------------------------------------------------------------------------- |
-| Словарное сжатие (Dictionary) | Используется для строковых данных с низкой кардинальностью; поддерживает локальные и глобальные словари |
-| RLE (Run Length Encoding)     | Идеально для булевых и повторяющихся значений, эффективно на отсортированных колонках                   |
-| Delta Encoding                | Применяется к монотонным числовым последовательностям (например, timestamps, ID, значения с шагом)      |
-| Frame-of-Reference            | Хранит базовое значение + смещения; минимизирует overhead при float/int данных                          |
-| Векторизованная декомпрессия  | Использует SIMD-инструкции (AVX2/AVX512/NEON) для распаковки колонок блоками по 128/256 элементов       |
-| Адаптивный выбор алгоритма    | Выбор основан на профайлинге кардинальности, энтропии, плотности NULL-ов и длине значений               |
-| Сжатие WAL и snapshot         | Применяет гибридное сжатие (dictionary + delta) для логов транзакций и инкрементальных снимков          |
+| Подсистема          | Реализация / Особенности                                      |
+| ------------------- | ------------------------------------------------------------- |
+| Конфигурация        | Загрузка из файла и переменных окружения                      |
+| Логирование         | Инициализация syslog / stderr / бинарного логирования         |
+| Хранилище           | Инициализация WAL, snapshot, recovery                         |
+| Планировщик         | Запуск планировщика обслуживания и наблюдения                 |
+| Интеграции          | Инициализация REST/gRPC интерфейсов                           |
+| Репликация / кворум | Подключение к кластеру (если включено)                        |
+| Завершение работы   | Обработка сигналов SIGINT/SIGTERM, освобождение всех ресурсов |
 
 ---
 
 ## 💾 Формат хранения данных
 
-```c
-typedef enum {
-    COMPRESSION_NONE,
-    COMPRESSION_DICT,
-    COMPRESSION_RLE,
-    COMPRESSION_DELTA,
-    COMPRESSION_FOR
-} compression_type_t;
-
-typedef struct compressed_block_t {
-    compression_type_t type;
-    uint32_t original_size;
-    uint32_t compressed_size;
-    uint8_t *data;
-} compressed_block_t;
-```
-
-Каждый сжатый блок сопровождается метаданными: тип сжатия, размеры, контрольные суммы, и может использоваться как в памяти, так и во временных snapshot-файлах на диске.
+*Отсутствует: блок не содержит структур хранения данных.*
 
 ---
 
 ## 🔄 Зависимости и связи
 
 ```plantuml
-compression_engine --> column_store
-compression_engine --> wal
-compression_engine --> snapshot_manager
-compression_engine --> planner
-compression_engine --> buffer_pool
+package "0 Инициализация" {
+  [0.1 Точка входа (main)]
+}
+
+[0.1 Точка входа (main)] --> [1.1 Инициализация конфигурации]
+[0.1 Точка входа (main)] --> [1.2 Инициализация логирования]
+[0.1 Точка входа (main)] --> [2.1 MVCC-хранилище]
+[0.1 Точка входа (main)] --> [3.1 Планировщик задач]
+[0.1 Точка входа (main)] --> [4.1 REST API / CLI]
+[0.1 Точка входа (main)] --> [7.1 Метрики и профилирование]
 ```
 
 ---
 
 ## 🧠 Особенности реализации
 
-* Реализация на языке **C23** с поддержкой inline vectorization (через compiler intrinsics)
-* SIMD-инструкции: AVX2/AVX512 (x86), NEON (ARM), с fallback на scalar
-* NUMA-aware аллокация: хранение и распаковка данных в локальной памяти NUMA-ноды
-* Адаптивная нагрузка: выбор алгоритма может пересчитываться при изменении кардинальности данных
-* Copy-on-write для транзакционно-защищённой модификации колонок
-* Thread-safe алгоритмы сжатия (через lock-free очереди и буферы)
+* Язык: **C23**
+* Безопасная обработка сигналов: `signal(SIGINT, handler)`
+* NUMA-aware контроль в startup логике
+* Используется `thrd_t` для запуска фоновых сервисов (metrics, GC)
+* Поддержка модов запуска (single-user / multi-user)
 
 ---
 
 ## 📂 Связанные модули кода
 
-* `src/compression/compression_engine.c`
-* `include/compression/compression_engine.h`
-* `src/compression/rle.c`
-* `src/compression/dict.c`
-* `src/compression/delta.c`
-* `src/compression/for.c`
+```text
+src/main.c
+include/main.h
+include/config.h
+include/log.h
+```
 
 ---
 
 ## 🔧 Основные функции на C
 
-| Имя функции             | Прототип                                                              | Описание                                                    |
-| ----------------------- | --------------------------------------------------------------------- | ----------------------------------------------------------- |
-| `compress_block`        | `compressed_block_t *compress_block(const void *input, size_t size)`  | Автоматический выбор и применение подходящего алгоритма     |
-| `decompress_block`      | `void *decompress_block(const compressed_block_t *block)`             | Распаковка сжатого блока в исходную область памяти          |
-| `choose_compression`    | `compression_type_t choose_compression(const void *data, size_t len)` | Профайлинг и эвристический выбор метода                     |
-| `compress_column_batch` | `void compress_column_batch(column_t *col)`                           | Массовое сжатие колонок для column-store                    |
-| `compression_init`      | `void compression_init(void)`                                         | Инициализация подсистемы, словарей и предвычисленных таблиц |
+| Имя функции        | Прототип                               | Описание                                              |
+| ------------------ | -------------------------------------- | ----------------------------------------------------- |
+| `main`             | `int main(int argc, char **argv)`      | Точка входа, запускает все подсистемы и петлю событий |
+| `log_startup_info` | `static void log_startup_info(void)`   | Логирует информацию о конфигурации, PID, памяти       |
+| `handle_signal`    | `static void handle_signal(int signo)` | Обрабатывает SIGINT/SIGTERM                           |
+| `db_initialize`    | `bool db_initialize(void)`             | Запускает все подсистемы                              |
+| `db_shutdown`      | `void db_shutdown(void)`               | Аккуратно завершает работу                            |
 
 ---
 
 ## 🧪 Тестирование
 
-* **Unit-тесты**: на корректность каждого алгоритма (RLE, dict, delta, FOR)
-* **Fuzz-тесты**: генерация случайных потоков байтов и сравнение результата после сжатия/декомпрессии
-* **Stress-тесты**: длительное сжатие/декомпрессия на 100+ ГБ mixed данных (json, float, strings)
-* **Coverage**: >95% покрытия по всем модулям compression/
-* **Soak-тесты**: декомпрессия при нагрузке с WAL и snapshot recovery одновременно
+| Вид теста | Методика / покрытие                         | Где расположен             |
+| --------- | ------------------------------------------- | -------------------------- |
+| Unit      | Проверка `handle_signal`, `db_initialize`   | `tests/test_main.c`        |
+| Soak      | Долгий запуск с инициализацией всех модулей | `tests/soak/init_stress.c` |
+| Fuzz      | Передача мусора в аргументах main           | `fuzz/fuzz_main_args.c`    |
+| Coverage  | Замеры через gcov / lcov                    | `coverage/index.html`      |
 
 ---
 
 ## 📊 Производительность
 
-| Метрика                     | Значение                                                     |
-| --------------------------- | ------------------------------------------------------------ |
-| Средний коэффициент сжатия  | 2.4x (dictionary), 3.6x (delta+FOR), 1.6x (смешанные данные) |
-| Скорость сжатия (in-memory) | 750 MB/s на поток (с включённой векторизацией, AVX2)         |
-| Скорость декомпрессии       | 1.2 GB/s на shard (на входе в OLAP executor)                 |
-| Overhead выбора стратегии   | <100 мкс на колонку                                          |
-| Расход памяти на метаданные | <0.5% от общего объёма данных                                |
+| Метрика                    | Значение  |
+| -------------------------- | --------- |
+| Время полной инициализации | 52–88 мс  |
+| Утилизация CPU при idle    | < 1% ядра |
+| Потоков фоновых задач      | 5–8       |
 
 ---
 
 ## ✅ Соответствие SAP HANA+
 
-| Критерий                    | Оценка | Комментарий                                                                |
-| --------------------------- | ------ | -------------------------------------------------------------------------- |
-| Поддержка всех типов сжатия | 100    | Полный набор: dict, RLE, delta, FOR                                        |
-| Интеграция с WAL и snapshot | 100    | Сжатие применяется при логировании и бэкапах                               |
-| Runtime декомпрессия        | 100    | Поддержка SIMD и векторного OLAP выполнения                                |
-| Адаптивный выбор стратегии  | 100    | Алгоритмы выборки работают во время инсерта и при изменении профиля данных |
+| Критерий                  | Оценка | Комментарий                               |
+| ------------------------- | ------ | ----------------------------------------- |
+| Многопоточный startup     | 100    | Используются потоки и NUMA-aware логика   |
+| Чистое завершение         | 100    | Обработка сигналов, освобождение ресурсов |
+| Расширяемость точки входа | 100    | Через хуки и конфигурацию                 |
 
 ---
 
 ## 📎 Пример кода на C
 
 ```c
-column_t *col = get_column("orders", "amount");
-compress_column_batch(col);
+signal(SIGINT, handle_signal);
+if (!db_initialize()) {
+    log_error("main", "Ошибка инициализации ядра БД.");
+    return EXIT_FAILURE;
+}
+log_info("main", "СУБД успешно запущена");
+thrd_join(metrics_thread, NULL);
 ```
 
 ---
 
-## 🔐 Безопасность данных
+## 🧩 Будущие доработки
 
-* Контрольные суммы CRC32/XXH64 на каждый блок сжатия
-* Проверка границ буфера при декомпрессии (memory safety)
-* Поддержка read-only snapshot mode для защиты от race-condition
-
----
-
-## 🛰️ Связь с бизнес-функциями
-
-* Обеспечивает хранение в RAM до 4-6x большего объема аналитических данных
-* Ускоряет выборки за счёт уменьшения пропускной способности памяти
-* Снижает размер резервных копий и время восстановления после сбоев
-* Позволяет обрабатывать миллиарды строк с минимальными затратами
+* Добавить async-обработку сигналов через `signalfd`
+* Отложенный запуск сетевых сервисов (bootup staging)
+* Возможность hot-reload конфигурации через сигнал `SIGHUP`
 
 ---
 
-## 🗂️ Версионирование и история изменений
+## 📐 UML-диаграмма (.puml)
 
-* Версия: `v1.0.2`
-* Обновлено: `26.07.2025`
-* Ответственный модуль: `compression_engine`, команда `core/storage`
-* История:
-
-  * `v1.0`: начальная реализация
-  * `v1.0.1`: добавлен SIMD-селектор и NUMA-aware allocator
-  * `v1.0.2`: расширены юнит-тесты и покрытие snapshot-интеграции
-
----
-
-## 📐 UML-диаграмма
-
-```plantuml
+```
 @startuml
-enum compression_type_t {
-  COMPRESSION_NONE
-  COMPRESSION_DICT
-  COMPRESSION_RLE
-  COMPRESSION_DELTA
-  COMPRESSION_FOR
-}
-
-class compressed_block_t {
-  +compression_type_t type
-  +uint32_t original_size
-  +uint32_t compressed_size
-  +uint8_t* data
-}
-
-column_store --> compressed_block_t
-wal --> compressed_block_t
+start
+:main();
+:config_load();
+:log_init();
+:db_initialize();
+if (error) then (yes)
+  :log_error();
+  stop
+else (no)
+  :run_services();
+  :wait_for_shutdown();
+endif
+:db_shutdown();
+stop
 @enduml
 ```
+
+---
+
+## 🧾 Связь с бизнес-функциями
+
+* Обеспечивает надёжную загрузку всех функций СУБД
+* Является первой точкой анализа сбоев (метрики, логи)
+* Инициирует ключевые SLA-компоненты: latency, отказоустойчивость
+
+---
+
+## 📜 Версионирование и история изменений
+
+| Версия | Дата       | Изменения                           |
+| ------ | ---------- | ----------------------------------- |
+| 1.0    | 2025-07-25 | Базовая инициализация               |
+| 1.1    | 2025-07-26 | Добавлена NUMA-aware инициализация  |
+| 1.2    | 2025-07-27 | Интеграция signal handler и cleanup |
+
+---
+
+## 🔒 Безопасность данных
+
+* Проверка UID пользователя (не root)
+* Защита от запуска нескольких экземпляров (pid-lock)
+* Обработка исключений и крашей с аварийным log dump
+
+---
+
+## 📝 Сообщения журнала (логирования)
+
+| Уровень | Сообщение                                  | Условие появления              |
+| ------- | ------------------------------------------ | ------------------------------ |
+| INFO    | `[main] СУБД стартует...`                  | Старт приложения               |
+| INFO    | `[main] Build: %s %s`                      | Время сборки                   |
+| INFO    | `[main] PID: %lu`                          | Идентификатор процесса         |
+| INFO    | `[main] Конфигурация: %s`                  | Путь к конфигу                 |
+| ERROR   | `[main] Ошибка инициализации ядра БД.`     | `db_initialize()` вернул false |
+| DEBUG   | `[main] Signal %d received, shutting down` | При получении SIGINT/SIGTERM   |
